regression/fail/constant-too-big.sml
val _ = 1234: Int8.int
val _ = 12345678: Int16.int
val _ = 12345678901234567890: Int32.int
val _ = 1234567890123456789012345678901234567890: Int64.int
val _ = 0w1234: Word8.word
val _ = 0w12345678: Word16.word
val _ = 0w12345678901234567890: Word32.word
val _ = 0w1234567890123456789012345678901234567890: Word64.word
val _ = 1e999: Real32.real
val _ = 1e999: Real64.real
val _ = #"\uFFFF": Char.char
val _ = "A\uFFFFB": String.string
val _ = "A\uFFFFB\u9999C": String.string
